# rim

./: Cargo.toml  README.md
src/: buffer.rs  caret.rs  command.rs  frame.rs  input.rs  keymap.rs  main.rs  rim.rs  screen.rs  view.rs
tests/: .gitignore
tests/buffer/: delete_big_range-expect.txt  delete_big_range.txt  delete_char_by_char_end-expect.txt  delete_char_by_char_mid-expect.txt  delete_char_by_char_mid.txt  delete_char_by_char_start-expect.txt  delete_utf8-expect.txt  delete_utf8.txt  existing_file_insert-expect.txt  lacking_newline.txt  line_column_offset.txt  long_string_insert-expect.txt  long_string_insert.txt  multiple_pages-expect.txt  new_file_insert-expect.txt  one_full_page-expect.txt  page_split_utf8_insert-expect.txt  page_split_utf8_insert.txt  utf8_one_byte_overflow-expect.txt  utf8_two_byte_overflow.txt
tests/caret/: hokey_pokey_caret.txt
tests/view/: caret_position.txt  scroll_into_view_double_width.txt
