[package]

name = "rim"
version = "0.0.1"
authors = [ "Mathias Hällman <rim@mths.se>" ]

[[bin]]
name = "rim"

[dependencies.termkey-rs]
git = "git://github.com/mathall/termkey-rs.git"

[dependencies]
bitflags = "*"
docopt = "*"
futures = "*"
libc = "*"
rand = "*"
rustc-serialize = "*"
term = "*"
tokio-core = "*"
tokio-timer = "*"
unicode-width = "*"
uuid = { version = "*", features = ["v4"] }
vec_map = "*"
