[package]
name = "rim"
version = "0.1.0"
authors = [ "Mathias Hällman <rim@mths.se>" ]

[[bin]]
name = "rim"

[dependencies]
bitflags = "*"
docopt = "*"
futures = "*"
libc = "*"
rand = "*"
serde = "1"
serde_derive = "1"
term = "*"
termkey-rs = { git = "git://github.com/mathall/termkey-rs.git" }
tokio-core = "*"
tokio-timer = "*"
unicode-width = "*"
uuid = { version = "*", features = ["v4"] }
vec_map = "*"
