[package]
name = "rim"
version = "0.1.0"
authors = [ "Mathias Hällman <rim@mths.se>" ]
edition = "2018"

[dependencies]
bitflags = "*"
docopt = "*"
futures = "*"
libc = "*"
rand = "*"
serde = "*"
serde_derive = "*"
term = "*"
termkey-rs = { git = "git://github.com/mathall/termkey-rs.git" }
tokio = { version = "*", features = ["rt", "time"] }
unicode-width = "*"
uuid = { version = "*", features = ["v4"] }
vec_map = "*"
